# wingpanel-indicator-sysmon

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
data/: Application.css  com.github.casasfernando.wingpanel-indicator-sysmon.appdata.xml.in  com.github.casasfernando.wingpanel-indicator-sysmon.desktop.in  com.github.casasfernando.wingpanel-indicator-sysmon.gresource.xml  com.github.casasfernando.wingpanel-indicator-sysmon.gschema.xml  com.github.plugarut.wingpanel-monitor.gschema.xml
data/icons/: Application.css  icons.indicator.gresource.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.casasfernando.wingpanel-indicator-sysmon.pot  de.po  es.po  fr.po  it.po  nl.po  pl.po  pt.po
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  it.po  nl.po  pl.po  pt.po
src/: Application.vala  Indicator.vala  MainWindow.vala  meson.build
src/Services/: Cpu.vala  CpuTemperature.vala  Disk.vala  Memory.vala  Network.vala  System.vala  Utils.vala
src/Widgets/: DiskWidget.vala  DisplayWidget.vala  IndicatorWidget.vala  NetworkWidget.vala  PopoverWidget.vala  PopoverWidgetRow.vala  Toggles.vala
