executable_sources = files (
    'Application.vala',
    'MainWindow.vala',

    'Widgets/Toggles.vala'
)

indicator_sources = files (
    'Indicator.vala',

    'Services/Cpu.vala',
    'Services/CpuTemperature.vala',
    'Services/Disk.vala',
    'Services/Memory.vala',
    'Services/Network.vala',
    'Services/System.vala',
    'Services/Utils.vala',

    'Widgets/DiskWidget.vala',
    'Widgets/DisplayWidget.vala',
    'Widgets/IndicatorWidget.vala',
    'Widgets/NetworkWidget.vala',
    'Widgets/PopoverWidget.vala',
    'Widgets/PopoverWidgetRow.vala'
)
